Edit Tigers and Loepards Hunk

--- a/tigers.yaml
+++ b/tigers.yaml
@@ -1,11 +1,13 @@
 team: Tigers
 
-manager: Donald
+manager: Thanos
 
-coach: Grace
+coach: Ronan
 
 Deborah:
 - Linda
 - William
 - David
 - George
+- Gamora
+- Nebula
